[project]
name = "gbm-longitudinal-toolkit"
version = "0.1.0"
description = "Longitudinal radiomics framework for GBM treatment response prediction"
requires-python = ">=3.12"
dependencies = [
    "pandas==3.0.1",
    "dvc==3.66.1",
    "ruff==0.15.5",
    "pyarrow>=23.0.1",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = false
