[project]
name = "gbm-longitudinal-toolkit"
version = "0.1.0"
description = "Longitudinal radiomics framework for GBM treatment response prediction"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas==3.0.1",
    "dvc==3.66.1",
    "ruff==0.15.5",
    "pyarrow==23.0.1",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.11",
    "plotly>=6.6.0",
    "mlflow>=1.27.0",
    "lightgbm>=4.6.0",
    "tqdm>=4.66.5",
    "scikit-learn>=1.8.0",
    "protobuf>=4.21.0,<5.0.0",
    "shap>=0.51.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-geometric = ["torch"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = false
